fruits/apple/staging/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
spec:
  replicas: 2
