fruits/apple/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple
spec:
  ingressClassName: nginx
  rules:
  - host: demo-apple-staging.your.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apple
            port:
              name: http
